--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -103,9 +103,10 @@
     "POKEDEX": {
         "ABOUT": {
             "TITLE": "About the project",
-            "DURATION": "Duration: 1 weeks",
+            "DURATION": "Duration: 1 week",
             "CONTENT": "This App is a self-built Pokédex App. It provides a comprehensive overview of Pokémon with detailed information, intuitive navigation, and a clean user interface, all developed independently to showcase strong problem-solving skills, structured data handling, and attention to detail.",
-            "MOBILE": "Technologies: HTML, CSS, JavaScript"            
+            "MOBILE": "Technologies: HTML, CSS, JavaScript",
+            "Mobile_DURATION": "Duration: 1 week"     
         },
         "WORK": {
             "TITLE": "How I have organised my work process",
@@ -121,7 +122,8 @@
             "TITLE": "About the project",
             "DURATION": "Duration: 5 weeks",
             "CONTENT": "A simple Jump-and-Run game based on an object-oriented approach. Help Pepe to find coins and poison bottles to fight against the killer chicken.",
-            "MOBILE": "Technologies: HTML, CSS, JavaScript"
+            "MOBILE": "Technologies: HTML, CSS, JavaScript",
+            "Mobile_DURATION": "Duration: 5 weeks"
         },
         "WORK": {
             "TITLE": "How I have organised my work process",
@@ -137,7 +139,8 @@
             "TITLE": "About the project",
             "DURATION": "Duration: 5 weeks",
             "CONTENT": "Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.",
-            "Mobile": "Technologies: HTML, CSS, JavaScript"
+            "Mobile": "Technologies: HTML, CSS, JavaScript",
+            "Mobile_DURATION": "Duration: 5 weeks"
         },
         "WORK": {
             "TITLE": "How I have organised my work process",
@@ -154,7 +157,8 @@
             "DURATION": "Duration: 3 weeks",
             "CONTENT": "This App is a Slack Clone App. It revolutionizes team communication and collaboration with its intuitive interface, real-time messaging, and robust channel organization. Show a desire to learn new technologies and continually improve your skills.",
             "MOBILE_P": "Ongoing Project",
-            "MOBILE": "Technologies: Angular, TypeScript, Firebase"
+            "MOBILE": "Technologies: Angular, TypeScript, Firebase",
+            "Mobile_DURATION": "Duration: 3 weeks"
         }
     }
 }
