finsh responsive design in legal-notice and privacy-policy

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -26,7 +26,7 @@
     "LEGAL_DISCLAIMER_TEXT": "Portfolio wird \"wie besehen\" ohne jegliche Gewährleistung bereitgestellt, sei es ausdrücklich oder stillschweigend, einschließlich, aber nicht beschränkt auf die stillschweigenden Gewährleistungen der Marktgängigkeit, Eignung für einen bestimmten Zweck und Nichtverletzung. Unter keinen Umständen haften wir, die aufgeführten Studenten, oder die Developer Akademie für direkte, indirekte, zufällige, besondere, Folgeschäden oder beispielhafte Schäden, einschließlich, aber nicht beschränkt auf Gewinne, Goodwill, Nutzung, Daten oder andere immaterielle Verluste, selbst wenn wir auf die Möglichkeit solcher Schäden hingewiesen wurden.",
     "LEGAL_INDEMNITY_TITLE": "Entschädigung",
     "LEGAL_INDEMNITY_TEXT": "Sie erklären sich damit einverstanden, uns, die aufgeführten Studenten, die Developer Akademie und unsere Partner, Mitarbeiter, Direktoren, Agenten und Angestellten schadlos zu halten und zu verteidigen gegen jegliche Ansprüche, Forderungen, Verluste, Schäden, Kosten oder Haftungen (einschließlich angemessener Anwaltskosten), die sich aus Ihrer Nutzung von Portfolio und/oder Ihrer Verletzung dieses Impressums ergeben. Für Fragen kontaktieren Sie uns bitte unter davideisenbarth@gmail.com. Datum: 14. Januar 2026",
-    "PRIVACY_TITLE": "Datenschutzerklärung",
+    "PRIVACY_TITLE": "Datenschutz&shy;erklärung",
     "PRIVACY_SECTION1_TITLE": "1. Datenschutz auf einen Blick",
     "PRIVACY_SECTION1_GENERAL_TITLE": "Allgemeine Informationen",
     "PRIVACY_SECTION1_GENERAL_TEXT": "Die folgenden Informationen geben einen einfachen Überblick darüber, was mit Ihren personenbezogenen Daten passiert, wenn Sie diese Website besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie persönlich identifiziert werden können.",
