--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,7 +26,7 @@
     "LEGAL_DISCLAIMER_TEXT": "Portfolio is provided \"as is\" without warranty of any kind, whether express or implied, including but not limited to the implied warranties of merchantability, fitness for a particular purpose, and non-infringement. In no event will we, the listed students, or the Developer Akademie, be liable for any direct, indirect, incidental, special, consequential or exemplary damages, including but not limited to, damages for loss of profits, goodwill, use, data, or other intangible losses, even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of Portfolio.",
     "LEGAL_INDEMNITY_TITLE": "Indemnity",
     "LEGAL_INDEMNITY_TEXT": "You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and our affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of Portfolio and/or your breach of this Legal Notice. For any questions or notices, please contact us at davideisenbarth@gmail.com. Date: January 14, 2026",
-    "PRIVACY_TITLE": "Privacy Policy",
+    "PRIVACY_TITLE": "Privacy&shy;Policy",
     "PRIVACY_SECTION1_TITLE": "1. Data Protection at a Glance",
     "PRIVACY_SECTION1_GENERAL_TITLE": "General Information",
     "PRIVACY_SECTION1_GENERAL_TEXT": "The following information provides a simple overview of what happens to your personal data when you visit this website. Personal data is any data with which you can be personally identified.",
